changes in readme

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This file was created by IntelliJ IDEA 11.1.4 for binding GitHub repository
+First app for Google Play
+I think usefull tool for testing regexps on phone
